model_library/kubernetes_configs/raw/model_library_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: model-library-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: model-library-app
  template:
    metadata:
      labels:
        app: model-library-app
    spec:
      containers:
      - name: model-library-container
        image: python:3.8-slim
        ports:
        - containerPort: 8000
        command: ["/bin/sh", "-c"]
        args:
        - |
          apt-get update && apt-get install -y git
          ls
          git clone https://github.com/kalavai-net/model-library.git /app/model-library
          cd /app/model-library
          pip install -e .
          uvicorn api.api:app --host 0.0.0.0 --port 8000
        resources:
          limits:
            cpu: 2
            memory: "4Gi"
          requests:
            cpu: 2 # must accommodate num-cores requested for execution
            memory: "4Gi" # must accommodate for the model's weights
        volumeMounts:
        - name: model-library-storage
          mountPath: "/model"
      restartPolicy: Always
      volumes:
      - name: model-library-storage
        persistentVolumeClaim:
          claimName: model-library-pvc
          
---
apiVersion: v1
kind: Service
metadata:
  name: model-library-service
spec:
  selector:
    app: model-library-app
  ports:
    - name: http
      port: 8000
      nodePort: 32702
  type: NodePort
