model_library/kubernetes_configs/raw/vllm-openai_deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vllm
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vllm-app
  namespace: vllm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vllm-app
  template:
    metadata:
      labels:
        app: vllm-app
    spec:
      #runtimeClassName: nvidia
      containers:
      - name: vllm-container
        image: vllm/vllm-openai:latest
        args: ["--model", "facebook/opt-350m"]
        ports:
        - containerPort: 8000
        resources:
          limits:
            nvidia.com/gpu: 1 # Specify the number of GPUs
            cpu: 4
            memory: "10Gi"
          requests:
            nvidia.com/gpu: 1 # Specify the number of GPUs
            cpu: 4
            memory: "10Gi"
        volumeMounts:
        - name: vllm-storage
          mountPath: "/model"
      restartPolicy: Always
      volumes:
      - name: vllm-storage
        persistentVolumeClaim:
          claimName: vllm-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: vllm-service
  namespace: vllm
spec:
  selector:
    app: vllm-app
  ports:
    - name: http
      port: 8000
  type: NodePort
